# spice-mcp-gateway-demo

./: .gitignore  README.md  docker-compose.yml  hermes-config.yaml  spicepod.yaml
fast-mcp-server/: Dockerfile  pyproject.toml
fast-mcp-server/src/fast_mcp_server/: __init__.py  server.py
spicepods/spiceai/quickstart/: spicepod.yaml
